--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/favicon/favicon.ico">
+    <script defer src="/js/app.js"></script>
     <title>Nuka Cola | 2044</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/whatIs.css">
+    <link rel="stylesheet" href="css/quantum.css">
     <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet'>
 </head>
+
 <body>
     <header class="topheader">
         <nav class="topnav">
@@ -32,5 +37,55 @@
             </ul>
         </nav>
     </header>
+
+    <div class="horizontal-padding vertical-padding">
+        <section class="profile" id="What-is-Nuka-Cola?">
+            <div class="profile-info">
+                <h1 class="profile-title">¿Qué es <br /><span>Nuka-Cola?</span></h1>
+                <p class="profile-details">
+                    Nuka-Cola es una bebida gaseosa con sabor a cola que ha ganado popularidad en todo el mundo gracias
+                    a su sabor único y refrescante.
+                    Esta bebida está elaborada con una mezcla de ingredientes artificiales y naturales, como extracto de
+                    cítricos, cáscara de limón y un toque de cáscara de agrumes.
+                    Además, está endulzada con azúcar y edulcorante artificial para proporcionarle un sabor dulce y
+                    agradable. Si buscas un poco de sabor y energía en tu día a día, Nuka-Cola es la opción perfecta.
+                    ¡Prueba esta bebida hoy y siente el sabor y la energía que solo ella puede ofrecer!
+                </p>
+            </div>
+            <span class="profile-img-section">
+                <img class="profile-img" src="/fotos/nuka-cola2.jpg" alt="nuka-cola">
+            </span>
+        </section>
+    </div>
+
+    <section class="projects" id="Nuka-Quantum">
+        <img src="/waves/wave-quantum.svg" class="wave-quantum" alt="wave-quantum">
+        <div class="projects-body">
+            <h2 class="projects-title">Nuka-Quantum</h2>
+            <div class="projects-grid">
+                <p class="quantum-details">
+                    ¿Estás buscando una bebida refrescante y llena de energía? ¡Entonces has venido al lugar correcto!
+                    Te presento nuestra Nuka-Cola Quantum, la variedad más popular de nuestra línea de productos.
+
+                    Esta deliciosa bebida azul tiene un sabor a frutas cítricas que te dejará con ganas de más. Además,
+                    con su alto contenido de azúcar y cafeína, te dará la energía que necesitas para enfrentar cualquier
+                    desafío que se te presente.
+
+                    No pierdas la oportunidad de probar esta deliciosa bebida. ¡Haz tu pedido hoy y experimenta el sabor
+                    único de la Nuka-Cola Quantum!
+                </p>
+                <div class="img-container">
+                    <span class="quantum-img-section">
+                        <img class="quantum-img" src="/fotos/nuka-quantum2.jpg" alt="nuka-cola">
+                    </span>
+                    <span class="quantum-img-section">
+                        <img class="quantum-img" src="/fotos/nuka-quantum.jpg" alt="nuka-cola">
+                    </span>
+                </div>
+            </div>
+        </div>
+        <img src="/waves/wave-quantum.svg" class="wave-quantum-bottom" alt="wave-quantum-bottom">
+    </section>
 </body>
+
 </html>
