--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                 </button>
                 <li><a href="#What-is-Nuka-Cola?">¿Que es Nuka-Cola?</a></li>
                 <li><a href="#Nuka-Quantum">Nuka-Quantum</a></li>
+                <li><a href="#contact">Contacto</a></li>
+                <li><a href="#Nuka-Victory">Nuka-Victory</a></li>
             </ul>
         </nav>
     </header>
@@ -59,11 +61,11 @@
         </section>
     </div>
 
-    <section class="projects" id="Nuka-Quantum">
+    <section class="quantum-container" id="Nuka-Quantum">
         <img src="/waves/wave-quantum.svg" class="wave-quantum" alt="wave-quantum">
-        <div class="projects-body">
-            <h2 class="projects-title">Nuka-Quantum</h2>
-            <div class="projects-grid">
+        <div class="quantum-body">
+            <h2 class="quantum-title">Nuka-Quantum</h2>
+            <div class="quantm-grid">
                 <p class="quantum-details">
                     ¿Estás buscando una bebida refrescante y llena de energía? ¡Entonces has venido al lugar correcto!
                     Te presento nuestra Nuka-Cola Quantum, la variedad más popular de nuestra línea de productos.
@@ -140,11 +142,11 @@
     </div>
 
     <section class="nuka-victory-container" id="Nuka-Victory">
-        <img src="/waves/orange-wave.svg" class="wave-quantum" alt="wave-quantum">
+        <img src="/waves/orange-wave.svg" class="wave-victory" alt="wave-victory">
         <div class="nuka-victory-body">
-            <h2 class="projects-title">Nuka-Victory</h2>
-            <div class="projects-grid">
-                <p class="quantum-details">
+            <h2 class="victory-title">Nuka-Victory</h2>
+            <div class="victory-grid">
+                <p class="victory-details">
                     La Nuka-Cola Victory es una edición especial de la famosa bebida Nuka-Cola. Es una mezcla única de
                     Nuka-Cola original con un toque de sabor a naranja, y está embotellada en una elegante botella naranja y
                     dorada. Se dice que tiene un sabor increíblemente delicioso y refrescante, además de ser rica en
@@ -152,8 +154,8 @@
                     gustaría probar una?
                 </p>
                 <div class="img-container">
-                    <span class="quantum-img-section">
-                        <img class="quantum-img" src="/fotos/nuka-victory.jpg" alt="nuka-cola-victory">
+                    <span class="victory-img-section">
+                        <img class="victory-img" src="/fotos/nuka-victory.jpg" alt="nuka-cola-victory">
                     </span>
                 </div>
             </div>
