--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
                 <button type="submit" class="contact-form-submit">Enviar</button>
 
-                <input type="hidden" name="_next" value="https://agustin-machado-cv.netlify.app">
+                <input type="hidden" name="_next" value="https://nuka-cola-template.netlify.app">
                 <input type="hidden" name="_captcha" value="false">
             </form>
             <nav class="social">
