--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
                 </button>
                 <li><a href="#What-is-Nuka-Cola?">¿Que es Nuka-Cola?</a></li>
                 <li><a href="#Nuka-Quantum">Nuka-Quantum</a></li>
-                <li><a href="#contact">Contacto</a></li>
+                <li><a href="#monkey">Nuka The monkey</a></li>
                 <li><a href="#Nuka-Victory">Nuka-Victory</a></li>
+                <li><a href="#contact">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -56,7 +57,7 @@
                 </p>
             </div>
             <span class="profile-img-section">
-                <img class="profile-img" src="/fotos/nuka-cola2.jpg" alt="nuka-cola">
+                <img class="profile-img" src="/fotos/nuka-cola4.jpg" alt="nuka-cola">
             </span>
         </section>
     </div>
@@ -88,6 +89,62 @@
             </div>
         </div>
         <img src="/waves/wave-quantum.svg" class="wave-quantum-bottom" alt="wave-quantum-bottom">
+    </section>
+
+    <div class="horizontal-padding vertical-padding">
+        <section class="profile" id="monkey">
+            <div class="profile-info">
+                <h1 class="profile-title"><span>Nuka The monkey</span></h1>
+                <p class="profile-details">
+                    Nuka-Cola siempre está buscando nuevas formas de sorprender a sus consumidores
+                    y llevar la experiencia Nuka-Cola a nuevos límites. Por lo tanto, Nuka-Cola decide llevar un mono al
+                    espacio en una misión científica y publicitaria.
+
+                    Nuka-Cola trabaja con un equipo de científicos y técnicos altamente capacitados para construir un
+                    cohete especialmente diseñado para llevar al mono en un viaje al espacio. El día del lanzamiento, un
+                    gran multitud se reúne para ver al mono, llamado "Nuka", ser lanzado al espacio.
+
+                    Durante su viaje, Nuka realiza una serie de experimentos científicos y envia mensajes y fotos de su
+                    experiencia en el espacio de vuelta a la Tierra. La misión de Nuka es un gran éxito y se convierte
+                    en uno de los eventos más notables de la historia.
+
+                    Nuka se convierte en un símbolo de la marca Nuka-Cola, ayudando a aumentar aún más la popularidad de
+                    la marca. La marca Nuka-Cola se enorgullece de haber llevado a cabo esta misión innovadora y haber
+                    contribuido al avance de la ciencia. La misión de Nuka también ha proporcionado información valiosa
+                    sobre cómo los animales reaccionan en el espacio y ha sido un gran avance para la ciencia.
+
+                    En resumen, la marca Nuka-Cola está siempre buscando nuevas formas de sorprender a sus consumidores
+                    y llevar la experiencia Nuka-Cola a nuevos límites, en esta ocasión llevando a un mono al espacio en
+                    una misión científica y publicitaria, convirtiendo al mono en un símbolo de la marca y contribuyendo
+                    al avance de la ciencia.
+            </div>
+            <span class="profile-img-section">
+                <img class="profile-img" src="/fotos/nuka-monkey.jpg" alt="nuka-cola">
+            </span>
+        </section>
+    </div>
+
+    <section class="nuka-victory-container" id="Nuka-Victory">
+        <img src="/waves/orange-wave.svg" class="wave-victory" alt="wave-victory">
+        <div class="nuka-victory-body">
+            <h2 class="victory-title">Nuka-Victory</h2>
+            <div class="victory-grid">
+                <p class="victory-details">
+                    La Nuka-Cola Victory es una edición especial de la famosa bebida Nuka-Cola. Es una mezcla única de
+                    Nuka-Cola original con un toque de sabor a naranja, y está embotellada en una elegante botella
+                    naranja y
+                    dorada. Se dice que tiene un sabor increíblemente delicioso y refrescante, además de ser rica en
+                    vitamina Nuka, lo que la convierte en una bebida energizante perfecta para los aventureros. ¿Te
+                    gustaría probar una?
+                </p>
+                <div class="img-container">
+                    <span class="victory-img-section">
+                        <img class="victory-img" src="/fotos/nuka-victory.jpg" alt="nuka-cola-victory">
+                    </span>
+                </div>
+            </div>
+        </div>
+        <img src="/waves/orange-wave.svg" class="wave-quantum-bottom" alt="wave-quantum-bottom">
     </section>
 
     <div class="horizontal-padding vertical-padding">
@@ -141,27 +198,6 @@
         </section>
     </div>
 
-    <section class="nuka-victory-container" id="Nuka-Victory">
-        <img src="/waves/orange-wave.svg" class="wave-victory" alt="wave-victory">
-        <div class="nuka-victory-body">
-            <h2 class="victory-title">Nuka-Victory</h2>
-            <div class="victory-grid">
-                <p class="victory-details">
-                    La Nuka-Cola Victory es una edición especial de la famosa bebida Nuka-Cola. Es una mezcla única de
-                    Nuka-Cola original con un toque de sabor a naranja, y está embotellada en una elegante botella naranja y
-                    dorada. Se dice que tiene un sabor increíblemente delicioso y refrescante, además de ser rica en
-                    vitamina Nuka, lo que la convierte en una bebida energizante perfecta para los aventureros. ¿Te
-                    gustaría probar una?
-                </p>
-                <div class="img-container">
-                    <span class="victory-img-section">
-                        <img class="victory-img" src="/fotos/nuka-victory.jpg" alt="nuka-cola-victory">
-                    </span>
-                </div>
-            </div>
-        </div>
-        <img src="/waves/orange-wave.svg" class="wave-quantum-bottom" alt="wave-quantum-bottom">
-    </section>
 
 </body>
 
